--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,22 +17,19 @@ a{
 .menu{
 	background-color: #343348;
 	width: 100%;
-	height: 60px;
+	height: 80px;
 	z-index: 100;
 	justify-content: center;
 	top: 0;
 	left: 0;
 	box-shadow: 0 2px 5px 0 rgba(135, 131, 131, 0.26);
-	display:grid;
+	/*! display:grid; */
 	grid-template-columns: auto auto auto auto;
 }
 .menu-item {
-	width: 4%;
-	display: flex;
-	top: 15px;
-	right: 30px;
-	padding: 5px;
+	width: 100%;
 	position: relative;
+	height: 100%;
 }
 #match-container {
 	top: 20%;
@@ -147,6 +144,13 @@ a{
     width: 0;
     opacity: 0;
 }
+#createRoom.shrinked2 {
+	right: 70%;
+	left: auto;
+	font-size: 0;
+    width: 0;
+    opacity: 0;
+}
 .button {
 	color: #343348;
 }
@@ -187,6 +191,13 @@ a{
     width: 0;
     opacity: 0;
 }
+#joinRoom.shrinked2 {
+	left: auto;
+	right: 4%;
+	font-size: 0;
+    width: 0;
+    opacity: 0;
+}
 .player_names {
 	left: 7%;
 	top: 45%;
@@ -197,11 +208,13 @@ a{
 }
 #login {
 	right: 5%;
-	top: 10%;
-	width: 100%;
-	height: 50%;
-	position: relative;
+	top: 50%;
+	/*! width: 100%; */
+	/*! height: 50%; */
+	position: absolute;
 	border-radius: 5px;
+	transform: translateY(-50%);
+	font-size: x-large;
 }
 #start {
 	left: 5%;
@@ -230,4 +243,42 @@ a{
 	top: 20%;
 	transform: translate(-50%, 0);
 	position: absolute;
+}
+#room_errors {
+    font-size: 100%;
+    top: 37%;
+    width: 90%;
+    height: auto;
+    position: absolute;
+    border-radius: 5px;
+    text-align: center;
+    left: 50%;
+	color: rgba(255, 0, 0, 0.897);
+    transform: translateX(-50%);
+}
+#profile_pic {
+	right: 1%;
+	top: 50%;
+	width: 64px;
+	height: 64px;
+	position: absolute;
+	border-radius: 32px;
+	object-fit: cover;
+	transform: translateY(-50%);
+}
+#player1 {
+	left: 85%;
+	top: 25%;
+	width: 5%;
+	height: 25%;
+	position: absolute;
+	border-radius: 5px;
+}
+#login {
+	right: 2%;
+	top: 50%;
+	width: 5%;
+	height: 50%;
+	position: absolute;
+	border-radius: 5px;
 }
