Refactor menu design

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
 	<div class="menu">
+		<div class="title-box">
+			<img src="assets/ping-pong.png" class="ping-pong-icon" />
+			<h1 class="ping-pong-title">Ping Pong</h1>
+		</div>
 		<div class="menu-item" id="menu-item-container">
-			<input id="player1" class="input" type="text" placeholder="NAME">
-			<button id="login" class="button">LOGIN</button>
+			<input id="player1" class="login-input" type="text" placeholder="Login">
+			<button id="login" class="sign-in-btn">SIGN IN</button>
 			<!-- <a id="login" href="https://api.intra.42.fr/oauth/authorize?client_id=u-s4t2ud-980c828f0609cae0f6762042edb5fa99953c2c0d899e807c79bca9e17c8db2bf&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2F&response_type=code">LOGIN</a> -->
 		</div>
 	</div>
