--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,36 +1,111 @@
+@font-face {
+	font-family: LemonMocktail;
+	src: url("/assets/lemon_mocktail.ttf");
+}
+
+
 html {
 	width: 100%;
 	height: 100%;
 }
 
 body {
-	font-family: Arial, sans-serif;
+	height: 97.8%;
+
+	font-family: sans-serif;
 	font-size: large;
-	background-color: #242331;
+	background-color: #0075C4;
+	border: 10px solid #ffffff;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
-a{
-	text-decoration: none;
-	color: #ffffff;
+.vertical-bar {
+	background-color: #ffffff;
+	width: 5px;
+	height: 101%;
+	position: absolute;
+	left: 50%;
+	top: -5px;
 }
+textarea:focus, input:focus{
+    outline: none;
+}
+
+/* -- MENU -- */
+
 .menu{
-	background-color: #343348;
+	background-color: #ffffff;
 	width: 100%;
 	height: 80px;
 	z-index: 100;
-	justify-content: center;
-	top: 0;
-	left: 0;
-	box-shadow: 0 2px 5px 0 rgba(135, 131, 131, 0.26);
-	/*! display:grid; */
+	display: flex;
+	align-items: center;
+	margin-top: 30px;
 	grid-template-columns: auto auto auto auto;
-}
-.menu-item {
-	width: 100%;
 	position: relative;
-	height: 100%;
 }
+
+.title-box {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.ping-pong-title {
+	font-family: LemonMocktail;
+	font-size: 3em;
+	margin-left: -120px;
+	color: #EFA00B;
+}
+.ping-pong-icon {
+	width: 80px;
+	margin-left: 60px;
+	opacity: 0.1;
+}
+
+.menu-item {
+	position: absolute;
+	right: 0px;
+	width: 40%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: right;
+}
+
+.login-input {
+	background-color: #00000000;
+	width: 150px;
+	border: 3px solid #0075C4;
+	height: 20px;
+	padding: 5px 10px 5px 10px;
+	border-radius: 7px 0px 0px 7px;
+	transition: .3s;
+}
+.sign-in-btn {
+	width: 100px;
+	height: 36px;
+	padding: 5px 10px 5px 10px;
+	white-space: nowrap;
+	overflow: hidden;
+	background-color: #0075C4;
+	border: 0;
+	color: white;
+	font-weight: bolder;
+	cursor: pointer;
+	border-radius: 0px 7px 7px 0px;
+	margin-right: 30px;
+	transition: .3s;
+}
+.login-input:focus {
+	border: 3px solid #EFA00B;
+}
+.login-input:focus + .sign-in-btn {
+	background-color: #EFA00B;
+}
+
+/* -- JOIN CREATE ROOM -- */
+
 #match-container {
 	top: 20%;
 	left: 4%;
@@ -43,6 +118,9 @@ a{
 	border-radius: 5px;
 	background-color: #acabb9;
 }
+
+/* -- OTHER -- */
+
 #stats-container {
 	top: 15%;
 	right: 5%;
@@ -54,20 +132,6 @@ a{
 	box-shadow: 0 0 50px 15px #535353;
 	border-radius: 5px;
 	background-color: #acabb9;
-}
-.input {
-	left: 5%;
-	top: 18%;
-	width: 88%;
-	height: 8%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	border-radius: 5px;
-	position: relative;
-	justify-content: center;
-	align-items: center;
 }
 #copyRoomCode {
 	font-size: 0;
@@ -151,9 +215,6 @@ a{
     width: 0;
     opacity: 0;
 }
-.button {
-	color: #343348;
-}
 #createRoom {
 	font-size: medium;
 	left: 5%;
@@ -206,16 +267,6 @@ a{
 	font-size: large;
 	color: #343348;
 }
-#login {
-	right: 5%;
-	top: 50%;
-	/*! width: 100%; */
-	/*! height: 50%; */
-	position: absolute;
-	border-radius: 5px;
-	transform: translateY(-50%);
-	font-size: x-large;
-}
 #start {
 	left: 5%;
 	bottom: 5%;
@@ -265,20 +316,4 @@ a{
 	border-radius: 32px;
 	object-fit: cover;
 	transform: translateY(-50%);
-}
-#player1 {
-	left: 85%;
-	top: 25%;
-	width: 5%;
-	height: 25%;
-	position: absolute;
-	border-radius: 5px;
-}
-#login {
-	right: 2%;
-	top: 50%;
-	width: 5%;
-	height: 50%;
-	position: absolute;
-	border-radius: 5px;
 }
