fixed declaring winner and finishing game (needs websockets and other shit)

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 			<p id="player1_name" class="player_names"></p>
 			<p id="player2_name" class="player_names"></p>
 			<button id="leave-button" onclick="leaveRoom()">LEAVE ROOM</button>
-			<button id="open-button" class="open-button" onclick="openForm()" disabled="true">START MATCH</button>
+			<button id="open-button" class="open-button" onclick="openForm()">START MATCH</button>
 			<div class="form-popup" id="myForm">
 			<form class="form-container">
 				<h1 >ONGOING MATCH</h1>
