Fixed sockets and animations after the match finishes and added leaderboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,22 @@
 			</form>
 			</div>
 		</div>
+		<div id="leaderboard-container">
+			<h1 id="leaderboard-h1" class="text">LEADERBOARD</h1>
+			<table class="leaderboard" id="leaderboard">
+				<tr class="leaderboard-row">
+					<td style="font-size: larger;"></td>
+					<td style="font-size: larger;">NAME</td>
+					<td style="font-size: larger;">ELO</td>
+				</tr>
+			</table>
+		</div>
 		<div id="stats-container">
 			<h1 id="stats-h1" class="text">STATS</h1>
-			<h3 id="stats-h3" class="text">ELO :</h3>
-			<h3 id="elo" class="text"></h3>
+			<h3 id="elo-display" class="text stats-display">ELO :</h3>
+			<h3 id="games-display" class="text stats-display">GAMES PLAYED :</h3>
+			<h3 id="wins-display" class="text stats-display">WINS :</h3>
+			<h3 id="losses-display" class="text stats-display">LOSSES :</h3>
 		</div>
 	</div>
 	<script src="js/index.js"></script>
