--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,28 +110,47 @@ textarea:focus, input:focus{
 	top: 20%;
 	left: 4%;
 	width: 35%;
-	height: 60%;
+	height: 70%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0 0 50px 15px rgba(255, 255, 255, 0.352);
 	border-radius: 5px;
 	background-color: rgb(255, 255, 255);
+	overflow-y: auto;
+	overflow-x: auto;
+}
+/* LEADERBOARD CONTAINER */
+#leaderboard-container {
+	top: 20%;
+	left: 45%;
+	width: 20%;
+	height: 70%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0 0 50px 15px rgba(255, 255, 255, 0.352);
+	border-radius: 5px;
+	background-color: rgb(255, 255, 255);
+	overflow-y: auto;
+	overflow-x: auto;
 }
 
 /* -- OTHER -- */
 
 #stats-container {
-	top: 15%;
+	top: 20%;
 	right: 5%;
-	width: 40%;
-	height: 80%;
+	width: 25%;
+	height: 70%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0 0 50px 15px rgba(255, 255, 255, 0.352);
 	border-radius: 5px;
 	background-color: rgb(255, 255, 255);
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 #copyRoomCode {
 	font-size: 0;
@@ -288,15 +307,24 @@ textarea:focus, input:focus{
 	color: #343348;
 }
 #stats-h1 {
-	left: 50%;
-	transform: translate(-50%, 0);
-	position: absolute;
+	position: relative;
+	text-align: center;
 }
-#stats-h3 {
+.leaderboard {
+	width: 80%;
 	left: 10%;
-	top: 20%;
-	transform: translate(-50%, 0);
-	position: absolute;
+	position: relative;
+}
+#leaderboard-h1 {
+	/* left: 50%; */
+	/* transform: translate(-50%, 0); */
+	position: relative;
+	text-align: center;
+}
+.stats-display {
+	left: 10%;
+	padding-top: 2%;
+	position: relative;
 }
 #elo {
 	left: 18%;
@@ -327,6 +355,17 @@ textarea:focus, input:focus{
 	object-fit: cover;
 	transform: translateY(-50%);
 }
+.leaderboard-text {
+	font-size: larger;
+}
+.leaderboard-pics {
+	position: relative;
+	width: 64px;
+	height: 64px;
+	border-radius: 32px;
+	object-fit: cover;
+}
+
 #ongoing-match {
 	left: 50%;
 	width: 100%;
@@ -394,6 +433,17 @@ textarea:focus, input:focus{
 .form-container {
   padding: 10px;
   height: 100%;
+}
+
+.leaderboard-row {
+	top: 40%;
+	position: relative;
+
+}
+.leadeboard {
+	top: 20%;
+	position: relative;
+	height: 100%;
 }
 
 /* Full-width input fields */
