--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 	<title>ft_pong</title>
 </head>
 <body>
@@ -16,7 +17,6 @@
 		</div>
 		<div class="menu-item" id="menu-item-container">
 			<h1 id="user-id">
-
 			</h1>
 		</div>
 	</div>
@@ -36,7 +36,7 @@
 			<div class="form-popup" id="myForm">
 			<form class="form-container">
 				<h1 >ONGOING MATCH</h1>
-				<h3 ><b>WHO WON ?</h3>
+				<h3 >WHO WON ?</h3>
 				<div class="winner-box">
 					<button id="player1-win" type="button" class="btn">PLAYER 1</button>
 					<button id="player2-win" type="button" class="btn player2">PLAYER 2</button>
