--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,6 @@ html {
 
 body {
 	height: 97.8%;
-
 	font-family: sans-serif;
 	font-size: large;
 	background-color: #0075C4;
@@ -107,10 +106,8 @@ textarea:focus, input:focus{
 /* -- JOIN CREATE ROOM -- */
 
 #match-container {
-	top: 20%;
-	left: 4%;
-	width: 35%;
-	height: 70%;
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
@@ -122,10 +119,8 @@ textarea:focus, input:focus{
 }
 /* LEADERBOARD CONTAINER */
 #leaderboard-container {
-	top: 20%;
-	left: 45%;
-	width: 20%;
-	height: 70%;
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
@@ -139,10 +134,20 @@ textarea:focus, input:focus{
 /* -- OTHER -- */
 
 #stats-container {
-	top: 20%;
-	right: 5%;
-	width: 25%;
-	height: 70%;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0 0 50px 15px rgba(255, 255, 255, 0.352);
+	border-radius: 5px;
+	background-color: rgb(255, 255, 255);
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+#invites-container {
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
@@ -309,6 +314,7 @@ textarea:focus, input:focus{
 #stats-h1 {
 	position: relative;
 	text-align: center;
+	margin-bottom: 0px;
 }
 .leaderboard {
 	width: 80%;
@@ -322,8 +328,8 @@ textarea:focus, input:focus{
 	text-align: center;
 }
 .stats-display {
-	left: 10%;
-	padding-top: 2%;
+	left: 5%;
+	margin: 3%;
 	position: relative;
 }
 #elo {
@@ -498,4 +504,41 @@ textarea:focus, input:focus{
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
+}
+@media screen and (max-width: 768px) {
+    .container {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust the width for smaller screens */
+    }
+}
+.canva { 
+	height: calc(97.8% - 80px);
+	display: grid;
+	grid-template-columns: 0.25fr 1fr 1fr 1fr 0.25fr;
+	grid-template-rows: 0.25fr 1fr 0.12fr 1fr 0.25fr;
+	gap: 0px 35px;
+	grid-auto-flow: row;
+	grid-template-areas:
+	  ". . . . ."
+	  ". match-container leaderboard-container stats-container ."
+	  ". match-container leaderboard-container . ."
+	  ". match-container leaderboard-container invites-container ."
+	  ". . . . .";
+	position: relative;
+  }
+  
+  #stats-container { grid-area: stats-container; }
+  
+  #leaderboard-container { grid-area: leaderboard-container; }
+  
+  #match-container { grid-area: match-container; }
+  
+  #invites-container { grid-area: invites-container; }
+  
+.invites-grid {
+	display:grid;
+	grid-auto-rows: 5%;
+}
+.invite {
+	margin: 5px;
+	text-align: center;
 }
