--- a/templates/confirm_token.html
+++ b/templates/confirm_token.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ft_pong</title>
-	<link rel="stylesheet" href="loading.css">
+	<link rel="stylesheet" href="styles/loading.css">
 </head>
 <body>
 	<div class="loader"></div>
